# obsidian-metrics

./: .gitignore  Cargo.toml  main.ts  manifest.json  package.json  rollup.config.js  tsconfig.json
src/: lib.rs  metrics.rs  note_memory_only.rs
