[package]
name = "wasm-module"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[dependencies]
obsidian-parser = { version = "0.8", features = ["petgraph", "logging"] }
petgraph = { version = "0.8", features = ["serde-1"] }
serde = "1"
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
wasm-bindgen = "0.2"
